# recall

./: .env.example  README.md  improvements.md  pyproject.toml
recall/: ai.py  config.py  db.py  main.py  models.py
recall_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
