[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-cli"
version = "0.1.0"
description = "AI-powered command assistant for developers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
recall = "recall.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["recall*"]
